# cli-snake-game

./: CMakeLists.txt  README.md  game.c
